# collaborative_exploration

./: README.md
failure_recovery/: CMakeLists.txt  package.xml
high_level_planner/: CMakeLists.txt  package.xml
high_level_planner/launch/: husky_mav_exploration.launch  husky_mav_servoing.launch  mav_mtp.launch  mav_visual_servoing.launch  nbv_exploration.launch  pan_tilt_pubs_delayed.launch  test_vins.launch
high_level_planner/resource/: exploration.yaml  mtp.yaml
high_level_planner/src/: mav_exploration_node.cc  odometry_switcher_node.cc
high_level_planner/worlds/: icra.world  icra2.world  mtp.world  mtp2.world  testroom  testroom.world
map_merger/: CMakeLists.txt  package.xml
map_merger/include/map_merger/: MapMerger.h  map_merger_node.h
map_merger/src/: MapMerger.cpp  map_merger_node.cpp
