<?xml version="1.0"?>
<package>
  <name>failure_recovery</name>
  <version>0.3.2</version>
  <description> Failure Recovery </description>
  <maintainer email="siddharthjha@outlook.com"></maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
