<?xml version="1.0"?>
<package>
  <name>failure_recovery</name>
  <version>0.3.2</version>
  <description> Failure Recovery </description>
  <maintainer email="siddharthjha@outlook.com"></maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>.
  <build_depend>nav_msgs</build_depend>.
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
  </export>
</package>
