<?xml version="1.0"?>
<package>
  <name>map_merger</name>
  <version>0.3.2</version>
  <description> Map Merger </description>
  <maintainer email="siddharthjha@outlook.com"></maintainer>
  <license>BSD</license>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
