<?xml version="1.0"?>
<package>
  <name>map_merger</name>
  <version>0.3.2</version>
  <description> Map Merger </description>
  <maintainer email="siddharthjha@outlook.com"></maintainer>
  <license>BSD</license>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>costmap_2d</run_depend>

  <export>
  </export>
</package>
